--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "test:server": "vitest run --config ./vitest-server.config.ts",
     "test": "npm run test:browser && npm run test:server",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
+    "test:e2e": "playwright test",
     "preview": "vite preview"
   },
   "dependencies": {
