--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,7 +1,7 @@
-name: Playwright Tests
+name: playwright tests
 on:
   push:
-    branches: [ main, master ]
+    branches: [ develop ]
   pull_request:
     branches: [ main, master ]
 jobs:
@@ -13,12 +13,16 @@ jobs:
     - uses: actions/setup-node@v4
       with:
         node-version: lts/*
+
     - name: Install dependencies
       run: npm ci
+
     - name: Install Playwright Browsers
       run: npx playwright install --with-deps
+
     - name: Run Playwright tests
-      run: npx playwright test
+      run: npm run test:e2e
+
     - uses: actions/upload-artifact@v4
       if: always()
       with:
