--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "jsdom": "^24.0.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
+    "vite-plugin-vercel": "^6.0.1",
     "vitest": "^1.6.0"
   }
 }
