--- a/package.json
+++ b/package.json
@@ -17,8 +17,9 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.44.0",
-    "@types/react": "^18.2.66",
-    "@types/react-dom": "^18.2.22",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
+    "@types/react-router-dom": "^5.3.3",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
     "@typescript-eslint/parser": "^7.2.0",
     "@vitejs/plugin-react": "^4.2.1",
@@ -26,6 +27,10 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
     "jsdom": "^24.0.0",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.4",
+    "react-router-dom": "^6.23.1",
+    "sort-by": "^1.2.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-vercel": "^6.0.1",
