--- a/.github/workflows/jsdom-tests.yml
+++ b/.github/workflows/jsdom-tests.yml
@@ -1,4 +1,4 @@
-name: playwright tests
+name: jsdom tests
 on:
   push:
     branches: [ develop ]
@@ -17,15 +17,5 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Install Playwright Browsers
-      run: npx playwright install chromium
-
     - name: Run Playwright tests
-      run: npm run test:e2e
-
-    - uses: actions/upload-artifact@v4
-      if: always()
-      with:
-        name: playwright-report
-        path: playwright-report/
-        retention-days: 3
+      run: npm run test:unit
