--- a/.github/workflows/jsdom-tests.yml
+++ b/.github/workflows/jsdom-tests.yml
@@ -17,5 +17,5 @@ jobs:
     - name: Install dependencies
       run: npm ci
 
-    - name: Run Playwright tests
+    - name: Run jsdom/react tests
       run: npm run test:unit
