--- a/.github/workflows/docsify.yml
+++ b/.github/workflows/docsify.yml
@@ -19,5 +19,5 @@ jobs:
     - uses: actions/checkout@master
     - uses: tool3/docsify-action@master
       with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
+        # github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: develop
