--- a/.github/workflows/docsify.yml
+++ b/.github/workflows/docsify.yml
@@ -8,19 +8,9 @@ on:
 
 # Sets permissions of the GITHUB_TOKEN to allow deployment to GitHub Pages
 permissions:
-  # contents: read
+  contents: read
   pages: write
   id-token: write
-  actions: write
-  checks: write
-  contents: write
-  deployments: write
-  issues: write
-  packages: write
-  pull-requests: write
-  repository-projects: write
-  security-events: write
-  statuses: write
 
 jobs:
   bump:
@@ -29,5 +19,5 @@ jobs:
     - uses: actions/checkout@master
     - uses: tool3/docsify-action@master
       with:
-        github_token: ${{ secrets.GP_TOKEN }}
+        github_token: ${{ secrets.GITHUB_TOKEN }}
         branch: develop
