--- a/package.json
+++ b/package.json
@@ -12,12 +12,9 @@
     "test:e2e": "playwright test",
     "preview": "vite preview"
   },
-  "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
     "@playwright/test": "^1.44.0",
+    "@scure/bip32": "^1.4.0",
     "@scure/bip39": "^1.3.0",
     "@testing-library/jest-dom": "^6.4.5",
     "@testing-library/react": "^15.0.7",
@@ -32,12 +29,17 @@
     "eslint": "^8.57.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.6",
+    "ethers": "^6.12.1",
     "jsdom": "^24.0.0",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.4",
+    "micro-starknet": "^0.2.3",
     "msw": "^2.3.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-router-dom": "^6.23.1",
     "sort-by": "^1.2.0",
+    "starknet": "^6.9.0",
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vite-plugin-vercel": "^6.0.1",
