--- a/signer/package.json
+++ b/signer/package.json
@@ -11,27 +11,31 @@
     "test": "vitest"
   },
   "dependencies": {
-    "markdown-to-jsx": "^7.7.3",
     "react": "19.0.0",
     "react-dom": "19.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
-    "@types/react": "19.0.7",
-    "@types/react-dom": "19.0.3",
+    "@scure/bip32": "^1.6.2",
+    "@scure/bip39": "^1.5.4",
+    "@scure/starknet": "^1.1.0",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
+    "@testing-library/user-event": "^14.6.1",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
     "@vitejs/plugin-react": "^4.3.4",
+    "buffer": "^6.0.3",
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
+    "markdown-to-jsx": "^7.7.3",
     "react-router": "^7.1.3",
+    "starknet": "^6.21.0",
     "typescript": "~5.6.2",
-    "typescript-eslint": "^8.18.2",
+    "typescript-eslint": "^8.21.0",
     "vite": "^6.0.11",
     "vitest": "^3.0.3"
   }
