--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,6 @@
 logs
 *.log
 npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
 
 node_modules
 dist
@@ -15,6 +11,7 @@ dist-ssr
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
+.vercel
 .idea
 .DS_Store
 *.suo
