--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.21.0",
     "vite": "^6.0.11",
+    "vite-plugin-vercel": "^9.0.4",
     "vitest": "^3.0.3"
   }
 }
