--- a/.github/workflows/jsdom-tests.yml
+++ b/.github/workflows/jsdom-tests.yml
@@ -1,22 +1,22 @@
 name: jsdom tests
 on:
   push:
-    branches: [ develop ]
+    branches: [develop]
   pull_request:
-    branches: [ develop ]
+    branches: [develop]
 
 jobs:
   test:
     timeout-minutes: 15
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-node@v4
-      with:
-        node-version: lts/*
+      - uses: actions/checkout@v4
+      - uses: actions/setup-node@v4
+        with:
+          node-version: lts/*
 
-    - name: Install dependencies
-      run: npm ci
+      - name: Install dependencies
+        run: npm ci
 
-    - name: Run jsdom/react tests
-      run: npm run test:unit
+      - name: Run jsdom/react tests
+        run: npm run test
