--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc -b && vite build",
+    "doc": "tsx ./scripts/doc.ts",
     "lint": "eslint .",
     "preview": "vite preview",
     "test": "vitest"
@@ -34,6 +35,7 @@
     "markdown-to-jsx": "^7.7.3",
     "react-router": "^7.1.3",
     "starknet": "^6.21.0",
+    "tsx": "^4.19.2",
     "typescript": "~5.6.2",
     "typescript-eslint": "^8.21.0",
     "vite": "^6.0.11",
