--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@0xknwn/starknet-modular-account": "^0.2.3",
     "@eslint/js": "^9.17.0",
     "@scure/bip32": "^1.6.2",
     "@scure/bip39": "^1.5.4",
