--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --config vite.local.ts",
     "build": "tsc -b && vite build",
     "doc": "tsx ./scripts/doc.ts",
     "lint": "eslint .",
