--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --config vite.local.ts",
     "build": "tsc -b && vite build",
     "doc": "tsx ./scripts/doc.ts",
     "lint": "eslint .",
@@ -16,6 +16,7 @@
     "react-dom": "19.0.0"
   },
   "devDependencies": {
+    "@0xknwn/starknet-modular-account": "^0.2.3",
     "@eslint/js": "^9.17.0",
     "@scure/bip32": "^1.6.2",
     "@scure/bip39": "^1.5.4",
