--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
     "markdown-to-jsx": "^7.7.3",
+    "msw": "^2.7.0",
     "react-jazzicon": "^1.0.4",
     "react-router": "^7.1.3",
     "starknet": "^6.21.0",
