--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@scure/bip32": "^1.6.2",
     "@scure/bip39": "^1.5.4",
     "@scure/starknet": "^1.1.0",
+    "@starknet-io/types-js": "^0.7.10",
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
