remove custom plugin

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "private": true,
   "version": "0.0.0",
   "type": "module",
+  "engines": {
+    "node": "22.x"
+  },
   "scripts": {
     "dev": "vite --config vite.local.ts",
     "build": "tsc -b && vite build",
@@ -28,6 +31,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
+    "@vercel/node": "^5.0.5",
     "@vitejs/plugin-react": "^4.3.4",
     "buffer": "^6.0.3",
     "eslint": "^9.17.0",
