--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@testing-library/user-event": "^14.6.1",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
+    "@vercel/edge": "^1.2.1",
     "@vercel/node": "^5.0.5",
     "@vitejs/plugin-react": "^4.3.4",
     "buffer": "^6.0.3",
