--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "node": "22.x"
   },
   "scripts": {
+    "api": "tsx watch --clear-screen=false ./localonly/server.ts",
     "dev": "vite --config vite.local.ts",
     "build": "tsc -b && vite build",
     "doc": "tsx ./scripts/doc.ts",
@@ -38,6 +39,7 @@
     "eslint": "^9.17.0",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
+    "express": "^4.21.2",
     "globals": "^15.14.0",
     "jsdom": "^26.0.0",
     "markdown-to-jsx": "^7.7.3",
