--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "api": "tsx watch --clear-screen=false ./localonly/server.ts",
-    "dev": "vite --config vite.local.ts",
+    "dev": "vite",
     "build": "tsc -b && vite build",
     "doc": "tsx ./scripts/doc.ts",
     "lint": "eslint .",
@@ -31,6 +31,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
+    "@types/express": "^5.0.0",
     "@types/react": "19.0.7",
     "@types/react-dom": "19.0.3",
     "@vercel/edge": "^1.2.1",
