--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@0xknwn/connect-api": "^0.0.12",
     "@0xknwn/starknet-modular-account": "^0.2.5",
     "@0xknwn/starknet-test-helpers": "^0.2.5",
-    "@eslint/js": "^9.17.0",
+    "@eslint/js": "^9.20.0",
     "@scure/bip32": "^1.6.2",
     "@scure/bip39": "^1.5.4",
     "@scure/starknet": "^1.1.0",
@@ -32,28 +32,28 @@
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^14.6.1",
     "@types/express": "^5.0.0",
-    "@types/react": "19.0.7",
+    "@types/react": "^19.0.8",
     "@types/react-dom": "19.0.3",
     "@vercel/edge": "^1.2.1",
-    "@vercel/node": "^5.0.5",
+    "@vercel/node": "^5.1.6",
     "@vitejs/plugin-react": "^4.3.4",
     "buffer": "^6.0.3",
-    "eslint": "^9.17.0",
+    "eslint": "^9.20.1",
     "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
+    "eslint-plugin-react-refresh": "^0.4.19",
     "express": "^4.21.2",
-    "globals": "^15.14.0",
+    "globals": "^15.15.0",
     "jsdom": "^26.0.0",
     "markdown-to-jsx": "^7.7.3",
     "msw": "^2.7.0",
     "react-jazzicon": "^1.0.4",
-    "react-router": "^7.1.3",
-    "starknet": "^6.21.0",
+    "react-router": "^7.1.5",
+    "starknet": "^6.23.1",
     "tsx": "^4.19.2",
-    "typescript": "~5.6.2",
-    "typescript-eslint": "^8.21.0",
-    "vite": "^6.0.11",
-    "vite-plugin-vercel": "^9.0.4",
-    "vitest": "^3.0.3"
+    "typescript": "^5.7.3",
+    "typescript-eslint": "^8.24.0",
+    "vite": "^6.1.0",
+    "vite-plugin-vercel": "^9.0.5",
+    "vitest": "^3.0.5"
   }
 }
